# comp_hw

./: .gitignore  HW1.cpp  HW1.py  HW1.tex  HW2.cpp  HW2.py  HW3.cpp  HW3.py  README.md  TODO  check.py  plot.py
HW1/: CMakeLists.txt  README.md  makefile  plot.py
HW1/doc/: Doxyfile
HW1/doc/html/: dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  globals.html  globals_func.html  graph_legend.html  hw1_8cpp.html  hw1_8cpp__incl.map  hw1_8cpp__incl.md5  hw1_8hpp.html  hw1_8hpp__dep__incl.map  hw1_8hpp__dep__incl.md5  hw1_8hpp__incl.map  hw1_8hpp__incl.md5  hw1_8hpp_source.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
HW1/doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  fdm.tex  files.tex  hw1_8cpp.tex  hw1_8cpp__incl.md5  hw1_8hpp.tex  hw1_8hpp__dep__incl.md5  hw1_8hpp__incl.md5  index.tex  main_8cpp.tex  main_8cpp__incl.md5  plot_converge.eps  plot_converge_theta.eps  plot_converge_traj.eps  plot_converge_zeta.eps  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  theta.tex  traj.tex
HW1/doc/src/: fdm.dox  fdm.hpp  mainpage.dox  mainpage.hpp  theta.dox  theta.hpp  traj.dox  traj_error.dox
HW1/include/: hw1.hpp
HW1/plot/: error_analysis.py  error_analysis_float.py  plot_converge_theta.eps  plot_converge_theta_double.eps  plot_converge_theta_float.eps  plot_converge_traj.eps  plot_converge_traj_double.eps  plot_converge_traj_float.eps  plot_converge_zeta.eps  plot_converge_zeta_double.eps  plot_converge_zeta_float.eps  plot_error_analysis_double.eps  plot_error_analysis_float.eps  plot_result.py  plot_result_double.py  plot_result_float.py  zeta10.txt  zeta100.txt  zeta1000.txt  zeta100000.txt  zeta100000f.txt  zeta10000f.txt  zeta1000f.txt  zeta10f.txt  zeta20.txt
HW1/plot/image/: plot_converge_theta_float.eps  plot_converge_traj_double.eps  plot_converge_zeta_double.eps  plot_error_analysis_double.eps  plot_error_analysis_float.eps
HW1/plot/root/: README.md  example.cpp
HW1/plot/script/: error_analysis.py  error_analysis_float.py  error_analysis_num.py  plot_result.py  plot_result_double.py
HW1/plot/txtfile/: zeta10.txt  zeta10000.txt  zeta100f.txt  zeta20.txt  zeta20f.txt
HW1/src/: hw1.cpp  main.cpp
HW1/src/include/: hw1.hpp  hw1.tpp
HW2/: CMakeLists.txt  README.md  makefile
HW2/doc/: Doxyfile
HW2/doc/html/: dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  globals.html  globals_func.html  graph_legend.html  hw2_8cpp.html  hw2_8cpp__incl.map  hw2_8cpp__incl.md5  hw2_8hpp.html  hw2_8hpp__dep__incl.map  hw2_8hpp__dep__incl.md5  hw2_8hpp__incl.map  hw2_8hpp__incl.md5  hw2_8hpp_source.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
HW2/doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.tex  files.tex  hw2_8cpp.tex  hw2_8cpp__incl.md5  hw2_8hpp.tex  hw2_8hpp__dep__incl.md5  hw2_8hpp__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
HW2/doc/src/: mainpage.dox  mainpage.hpp  num_int.dox  num_int.hpp
HW2/include/: hw2.hpp  hw2.tpp
HW2/plot/: error_analysis.py  plot_converge.eps  plot_converge_float.eps  plot_error.eps  plot_error_float.eps  plot_result.py  zeta10.txt  zeta100.txt  zeta1000.txt  zeta10000.txt  zeta10000f.txt  zeta1000f.txt  zeta100f.txt  zeta10f.txt  zeta5.txt
HW2/plot/imag/: plot_converge_float.eps  plot_error.eps  plot_error_float.eps
HW2/plot/image/: plot_converge.eps  plot_num_error_float.eps
HW2/plot/root/: example.cpp
HW2/plot/script/: error_analysis.py  error_analysis_float.py  num_error.py  plot_result.py  plot_result_float.py
HW2/plot/txt/: zeta10.txt  zeta100.txt  zeta10000f.txt  zeta1000f.txt  zeta100f.txt  zeta5f.txt
HW2/plot/txtfile/: plot_error.eps  zeta1000.txt  zeta10000.txt  zeta5.txt
HW2/src/: hw2.cpp  main.cpp
HW2/src/include/: hw2.hpp  hw2.tpp
HW3/: .01  1  CMakeLists.txt  README.md  make.inc  makefile  plot.py  tst.cpp  zeta.txt  zeta3.txt  zeta_fourier_1.txt  zeta_fourier_2.txt  zeta_fourier_4.txt  zeta_ref.txt  zeta_tst.txt
HW3/doc/: Doxyfile
HW3/doc/html/: dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  globals.html  globals_func.html  graph_legend.html  hw3_8cpp.html  hw3_8cpp__incl.map  hw3_8cpp__incl.md5  hw3_8hpp.html  hw3_8hpp__dep__incl.map  hw3_8hpp__dep__incl.md5  hw3_8hpp__incl.map  hw3_8hpp__incl.md5  hw3_8hpp_source.html  index.html  main_8cpp.html  (+5 more)
HW3/monitor/: plot_monitor_double.py  plot_monitor_float.py
HW3/result/: 1  2  error_analysis.py  exact_action.py  fourier1.txt  fourier1_sys.txt  fourier1f.txt  fourier1f_non_sys.txt  fourier1f_sys.txt  fourier2.txt  fourier2_sys.txt  fourier2f.txt  fourier2f_non_sys.txt  fourier2f_sys.txt  fourier3_2.txt  fourier3_non_sys.txt  fourier3_sys.txt  fourier3_sys2.txt  fourier3f.txt  fourier3f_2.txt  fourier3f_non_sys.txt  fourier3f_non_sys2.txt  fourier3f_sys.txt  fourier3f_sys2.txt  fourier4_1e-4.txt  fourier4_1e-6.txt  fourier4_1e-8.txt  fourier4_2.txt  fourier4f_1e-4.txt  fourier4f_2.txt  fourier4f_non_sys2.txt  fourier_nf1.txt  fourier_nf2.txt  fourier_nf3.txt  fourier_nf4.txt  fourier_nf4_lambda10000.txt  fourier_nf4_lambda100000.txt  fourier_nf4_lambda1000000.txt  fourier_nf4_step1e-4_lambda10000.txt  fourier_nf8.txt  (+64 more)
HW3/src/: 1  2  action.cpp  fourier.cpp  fourier_path.cpp  hw3.cpp  kepler.cpp  main.cpp  mcm_basic.cpp  mcm_move.cpp  mcm_opt.cpp  move.cpp  path.cpp  support.cpp  vector.cpp
HW3/test/: README.md  makefile  test.cpp  test.txt  test_action_kepler.cpp  test_action_simple.cpp  test_action_vaildity.cpp  test_bezier.cpp  test_bezier_path.cpp  test_fourier.cpp  test_fourier_path.cpp  testf.txt
(+228 files in other folders)
